# codemetrics

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  codemetrics.py  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: codeql-analysis.yml  coverage.yml  publish.yml  python-app.yml
codemetrics/: __init__.py  cli.py  cloc.py  cmdline.py  core.py  git.py  internals.py  lizardtokencounts.py  loc.py  pbar.py  scm.py  svn.py  vega.py
codemetrics/lizard_ext/: lizardtokencounts.py
docs/: Makefile  codemetrics.rst  conf.py  index.rst  installation.rst  make.bat  recipes.rst  requirements.txt  usage.rst  vega.rst
notebooks/: pandas.html  pandas.ipynb  requirements.txt
tests/: __init__.py  test_cloc.py  test_cmdline.py  test_codemetrics.py  test_core.py  test_git.py  test_internals.py  test_lizardtokencounts.py  test_loc.py  test_pbar.py  test_scm.py  test_svn.py  test_vega.py  utils.py
