[build-system]
requires = [
    "setuptools>=40.9.0",
    "wheel",
    "numpy==1.16.5; python_version=='3.7' and platform_system!='AIX'",
    "numpy==1.17.3; python_version=='3.8' and platform_system!='AIX'",
    "numpy==1.16.5; python_version=='3.7' and platform_system=='AIX'",
    "numpy==1.17.3; python_version=='3.8' and platform_system=='AIX'",
    "numpy; python_version>='3.9'",
]
build-backend = "setuptools.build_meta"


