[build-system]
requires = [
    "setuptools>=40.9.0",
    "wheel",
]
build-backend = "setuptools.build_meta"


[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.11.7"
tag_format = "v$version"
version_files = [
    "codemetrics/__init__.py:__version__",
    "setup.cfg:version"
]
