[build-system]
requires = [
    "setuptools>=40.9.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "codemetrics"
version = "1.0.0"
description = "SCM mining utility classes"
readme = "README.rst"
license = "MIT"
keywords = ["code", "metrics", "mining", "scm", "subversion", "svn", "Adam Tornhill", "utilities"]
authors = [
    {name = "elmotec", email = "elmotec@gmx.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Topic :: Software Development :: Version Control",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
]
requires-python = ">=3.6"
dependencies = [
    "numpy>=2",
    "click>=6",
    "pandas>=2",
    "tqdm>=4",
    "python-dateutil>=2",
    "scikit-learn",
    "lizard>1.17",
    "mypy-extensions",
]

[project.urls]
Homepage = "http://github.com/elmotec/codemetrics"

[project.scripts]
cm_func_stats = "codemetrics.cmdline:cm_func_stats"

[project.optional-dependencies]
develop = [
    "black[d]",
    "build",
    "commitizen<4.9",
    "coverage",
    "flake8",
    "pip",
    "pre-commit",
    "tox",
    "twine",
    "watchdog",
    "wheel",
    "pytest",
]
notebooks = [
    "altair",
    "ipywidgets",
    "jupyterlab",
    "matplotlib",
]

[tool.setuptools]
packages = ["codemetrics"]
include-package-data = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "codemetrics/__init__.py:__version__",
]
