[metadata]
name=codemetrics
summary=SCM mining utility classes
version=0.9.6
author=elmotec
author_email=elmotec@gmx.com
description-file=
    README.rst
    HISTORY.rst
license=MIT
keywords=code,metrics,mining,scm,subversion,svn,Adam Tornhill,utilities
home-page=http://github.com/elmotec/codemetrics
requires-dist=setuptools
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Environment :: Console
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities
    Topic :: Software Development :: Version Control
    Intended Audience :: Developers
    Intended Audience :: Education

[options]
setup_requires=
    wheel
install_requires=
    numpy<=1.19.3
    click>=6.0
    pandas
    tqdm
    python-dateutil
    scikit-learn
    lizard
    dataclasses;python_version=="3.6"
include_package_data=True,
packages=codemetrics
test_suite=tests
python_requires= >=3.6

[entry_points]
console_scripts =
    cm_func_stats=codemetrics.cmdline:cm_func_stats

[build-system]
requires =
    setuptools >= 40.9.0
    wheel
build-backend = "setuptools.build_meta"

[bumpversion]
current_version = 0.9.6
commit = False
tag = False

[bumpversion:file:setup.cfg]
search = version={current_version}
replace = version={new_version}

[bumpversion:file:codemetrics/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 119

[isort]
profile = black

[tox:tox]
envlist = py36, py37, py38, py39, docs
isolated_build = True

[testenv]
deps =
    --prefer-binary
    .
    pytest
commands = pytest tests

[testenv:docs]
deps =
    sphinx
    sphinx-autodoc-typehints 
    sphinx-rtd-theme
commands = python setup.py build_sphinx

[aliases]

