[bumpversion]
current_version = 0.11.5
commit = False
tag = False

[metadata]
name = codemetrics
summary = SCM mining utility classes
version = 0.11.5
author = elmotec
author_email = elmotec@gmx.com
description_file =
	README.rst
	HISTORY.rst
long_description = file: README.rst, HISTORY.rst, LICENSE.txt
long_description_content_type = text/x-rst
license = MIT
keywords = code,metrics,mining,scm,subversion,svn,Adam Tornhill,utilities
home_page = http://github.com/elmotec/codemetrics
requires_dist = setuptools
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Environment :: Console
	Natural Language :: English
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development
	Topic :: Utilities
	Topic :: Software Development :: Version Control
	Intended Audience :: Developers
	Intended Audience :: Education

[options]
setup_requires =
	wheel
install_requires =
	numpy!=1.19.4
	click>=6.0
	pandas
	tqdm
	python-dateutil
	scikit-learn
	lizard
	mypy-extensions
include_package_data = True,
packages = codemetrics
test_suite = tests
python_requires = >=3.6

[entry_points]
console_scripts =
	cm_func_stats=codemetrics.cmdline:cm_func_stats

[build-system]
requires =
	setuptools>=40.9.0
	wheel
build-backend = "setuptools.build_meta"

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:codemetrics/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 119

[isort]
profile = black

[tox:tox]
envlist = py37, py38, py39, coverage, docs
isolated_build = True

[testenv]
deps =
	--prefer-binary
	.
	pytest
commands = pytest tests

[testenv:coverage]
deps =
	--prefer-binary
	.
	pytest
	pytest-cov
commands =
	coverage erase
	pytest --cov=codemetrics --cov-branch --cov-report=term-missing:skip-covered --cov-config=setup.cfg
	coverage report --omit='.tox/*'
	coverage html --omit='.tox/*'

[testenv:docs]
deps =
	sphinx
	sphinx-autodoc-typehints
	sphinx-rtd-theme
commands = python setup.py build_sphinx

[tool:pytest]
norecursedirs = .* *.egg* build dist docs conf

[coverage:run]
omit =
	docs/*
	tests/*
	conf/*

[aliases]
